--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
          <style>
         
              Body{
-                 background-color: black;
+                 background-image: url(http://freedomwallpaper.com/wallpaper2/funky-wallpaper-hd.jpg);
+                 background-repeat: no-repeat;
+                 background-size: 100% 100% ; 
              }
              h1{
                  color: white;
